[package]
name = "rust-boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luwen-ref = { git = "https://github.com/tenstorrent/luwen.git", tag = "v0.6.5" }
luwen-core = { git = "https://github.com/tenstorrent/luwen.git", tag = "v0.6.5" }
luwen-if = { git = "https://github.com/tenstorrent/luwen.git", tag = "v0.6.5" }
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
clap-num = "1.2.0"
